--- a/.github/workflows/main-build.yml
+++ b/.github/workflows/main-build.yml
@@ -30,7 +30,10 @@ jobs:
         cache: true
 
     - name: Install dependencies
-      run: go mod download
+      run: |
+        # Install SQLite development headers
+        sudo apt-get update && sudo apt-get install -y libsqlite3-dev gcc
+        go mod download
 
     - name: Run tests
       run: go test -v ./...
@@ -87,7 +90,7 @@ jobs:
         CGO_ENABLED: 1
         CC: aarch64-linux-gnu-gcc
       run: |
-        sudo apt-get update && sudo apt-get install -y gcc-aarch64-linux-gnu
+        sudo apt-get update && sudo apt-get install -y gcc-aarch64-linux-gnu libsqlite3-dev
         go build -ldflags="-s -w -X main.version=${{ steps.version.outputs.new }}" -o dist/lil-rag-linux-arm64 ./cmd/lil-rag
         go build -ldflags="-s -w -X main.version=${{ steps.version.outputs.new }}" -o dist/lil-rag-server-linux-arm64 ./cmd/lil-rag-server
         go build -ldflags="-s -w -X main.version=${{ steps.version.outputs.new }}" -o dist/lil-rag-mcp-linux-arm64 ./cmd/lil-rag-mcp
@@ -103,7 +106,7 @@ jobs:
         CGO_ENABLED: 1
         CC: x86_64-w64-mingw32-gcc
       run: |
-        sudo apt-get install -y gcc-mingw-w64
+        sudo apt-get install -y gcc-mingw-w64 libsqlite3-dev
         go build -ldflags="-s -w -X main.version=${{ steps.version.outputs.new }}" -o dist/lil-rag-windows-amd64.exe ./cmd/lil-rag
         go build -ldflags="-s -w -X main.version=${{ steps.version.outputs.new }}" -o dist/lil-rag-server-windows-amd64.exe ./cmd/lil-rag-server
         go build -ldflags="-s -w -X main.version=${{ steps.version.outputs.new }}" -o dist/lil-rag-mcp-windows-amd64.exe ./cmd/lil-rag-mcp
